unpackaged/main/default/objects/Account_Management_Role__c/Account_Management_Role__c.object-meta.xml
<CustomObject>
    <description>This is the junction object between the Contact and the Account Management object.</description>
    <label>Account Management Role</label>
    <nameField>
        <displayFormat>AMR - {000000}</displayFormat>
        <label>Account Management Roles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Management Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>