unpackaged/main/default/objects/Account_Management_Role__c/fields/Associated_Customer__c.field-meta.xml
<CustomField>
    <fullName>Associated_Customer__c</fullName>
    <inlineHelpText>who is the contact that is associated with this role that you have chosen?</inlineHelpText>
    <label>Associated Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Management Roles</relationshipLabel>
    <relationshipName>Account_Management_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>