unpackaged/main/default/objects/Account_Management_Role__c/fields/Related_Document__c.field-meta.xml
<CustomField>
    <fullName>Related_Document__c</fullName>
    <inlineHelpText>Which document does this relate to? The Opportunity Qualifier Template or something else?</inlineHelpText>
    <label>Related Document</label>
    <referenceTo>Account_Management__c</referenceTo>
    <relationshipLabel>Account Management Roles</relationshipLabel>
    <relationshipName>Account_Management_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>