unpackaged/main/default/objects/Account_Management_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>Economic Buyer</fullName>
            </value>
            <value>
                <fullName>Other Influencer</fullName>
            </value>
            <value>
                <fullName>Technical Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>