unpackaged/main/default/objects/Account_Management_Role__c/fields/Validation_How_do_you_know__c.field-meta.xml
<CustomField>
    <fullName>Validation_How_do_you_know__c</fullName>
    <inlineHelpText>How do you know this person is the specific role that you have outlined?</inlineHelpText>
    <label>Validation? How do you know?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>